<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.CurrencyExchangeActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0F0F0F">

        <TextView
            android:id="@+id/base_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="32dp"
            android:text="@string/base"
            android:textColor="@color/creamy_white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quote_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:layout_marginTop="32dp"
            android:text="@string/quote_text"
            android:textColor="@color/creamy_white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/base_unit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/mettalic_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quote_text">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/home_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/creamy_white"
                android:backgroundTint="@color/creamy_white"
                android:hint="@string/quote_format_xxx"
                android:inputType="textCapCharacters"
                android:minEms="1"
                android:text="@string/XX2"
                android:textColor="@color/brandcolor"
                android:textSize="40sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/quote_unit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/mettalic_gold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/base_text">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/base_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/creamy_white"
                android:backgroundTint="@color/creamy_white"
                android:hint="@string/base_format_xxx"
                android:inputType="textCapCharacters"
                android:minEms="1"
                android:text="@string/XXX"
                android:textColor="@color/brandcolor"

                android:textSize="40sp" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="164dp"
            android:text="@string/rate_text"
            android:textColor="@color/creamy_white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_curr"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:background="@color/mettalic_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_text" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/set_rate_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="155dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="14dp"
            android:textColorHint="@color/mettalic_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_curr">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/set_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/creamy_white"
                android:backgroundTint="@color/creamy_white"
                android:hint="@string/set_rate"
                android:inputType="numberDecimal"
                android:minEms="2"
                android:text="@string/rate"
                android:textColor="@color/brandcolor"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etInput_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="135dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="11dp"
            android:textColorHint="@color/mettalic_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvoutputRate">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/creamy_white"
                android:backgroundTint="@color/creamy_white"
                android:hint="@string/amount_hint"
                android:inputType="number"
                android:minEms="4"
                android:textColor="@color/brandcolor"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tvoutputRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="14dp"
            android:text="@string/amount_enter"
            android:textColor="@color/mettalic_gold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fetch_rate" />

        <Button
            android:id="@+id/fetch_rate"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="11dp"
            android:text="@string/c_fetch"
            android:textColor="@color/brandcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_rate_layout" />

        <Button
            android:id="@+id/btnCalculate"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="69dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="14dp"
            android:text="@string/c_calc"
            android:textColor="@color/brandcolor"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInput_layout" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
